@@ -1,3 +1,6 @@
+Sat  Oct  2  2004	H. Wade Minter (minter@lunenburg.org)
+     * Nicer output from cpancheck.pl
+
 Sat  Sep 25  2004	H. Wade Minter (minter@lunenburg.org)
      * Fixed a bug that prevented the holding tank from launching playlists.
      * Released Version 2.0.1 with this bugfix.
